<resources>
    <string name="app_name">Mipractica</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="ph_correo">Digite su correo</string>
    <string name="ph_clave">Digite su contraseña</string>


    <string name="title_activity_central">Central</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_estado">Estados</string>
    <string name="menu_gallery">Galería</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del cliente</string>
    <string name="msg_lugar">Nombre de la lugar</string>
    <string name="msg_poblacion">Población</string>
    <string name="msg_deuda">Precio a pagar del viaje</string>

    <string name="bt_agregar">Agregar</string>
    <string name="bt_actualizar">Actualizar</string>

    <string name="msg_agregado">Estado agregado</string>
    <string name="msg_actualizado">Estado actualizado</string>

    <string name="menu_delete">Eliminar elemento</string>

    <string name="si">Eliminar</string>

    <string name="msg_seguro">¿Está seguro de que desea eliminar </string>
    <string name="no">Cancelar</string>

    <string name="menu_viaje">Viajes</string>
</resources>