<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_viaje">

    <fragment
        android:id="@+id/nav_viaje"
        android:name="com.mipractica.ui.viaje.ViajeFragment"
        android:label="@string/menu_viaje"
        tools:layout="@layout/fragment_viaje" >
        <action
            android:id="@+id/action_nav_viaje_to_addViajeFragment"
            app:destination="@id/addViajeFragment" />
        <action
            android:id="@+id/action_nav_viaje_to_updateViajeFragment"
            app:destination="@id/updateViajeFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mipractica.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mipractica.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addViajeFragment"
        android:name="com.mipractica.ui.viaje.AddViajeFragment"
        android:label="fragment_add_viaje"
        tools:layout="@layout/fragment_add_viaje" >
        <action
            android:id="@+id/action_addViajeFragment_to_nav_viaje"
            app:destination="@id/nav_viaje" />
    </fragment>
    <fragment
        android:id="@+id/updateViajeFragment"
        android:name="com.mipractica.ui.viaje.UpdateViajeFragment"
        android:label="UpdateViajeFragment" >
        <action
            android:id="@+id/action_updateViajeFragment_to_nav_viaje"
            app:destination="@id/nav_viaje" />
        <argument
            android:name="viaje"
            app:argType="com.mipractica.model.Viaje" />
    </fragment>
</navigation>